CloudFormation/YAML/夢テク研修課題解答/CF-instance.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Create EC2 Instance
Parameters:
  KeyName: 
    Description : Name of an existing EC2 KeyPair.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription : Can contain only ASCII characters.

Description: Create EC2 Instance
Resources:
  MyEC2Instance1:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-05c2957d14f890366
      InstanceType: t2.micro
      SubnetId: !ImportValue VPC-koutiku-PublicSubnet1A
      BlockDeviceMappings:
        -
          DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp2
            VolumeSize: 8
      Tags:
      - Key: Name
        Value: CF-public-1a
      KeyName: !Ref KeyName
      SecurityGroupIds:
         - !GetAtt "InstanceSecurityGroup.GroupId"

  MyEC2Instance2:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-05c2957d14f890366
      InstanceType: t2.micro
      SubnetId: !ImportValue VPC-koutiku-PublicSubnet1C
      BlockDeviceMappings:
        -
          DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp2
            VolumeSize: 8
      Tags:
      - Key: Name
        Value: CF-public-1c
      KeyName: !Ref KeyName
      SecurityGroupIds:
         - !GetAtt "InstanceSecurityGroup.GroupId"

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: connect with ssh,HTTP,HTTPS
      VpcId: !ImportValue VPC-koutiku-VPCID
      Tags:
      - Key: Name
        Value: CF-secGP
      SecurityGroupIngress:
        -
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        -
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        -
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  InternetELB: 
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: CF-elb
      SecurityGroups: 
        - !Ref InstanceSecurityGroup
      Subnets: 
        - !ImportValue VPC-koutiku-PublicSubnet1A
        - !ImportValue VPC-koutiku-PublicSubnet1C

  ELBtargetGP:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: 
      Name: ELBtargetGP
      Port: 80
      Protocol: HTTP
      Targets: 
        - Id: !Ref MyEC2Instance1
        - Id: !Ref MyEC2Instance2
      TargetType: instance
      VpcId: !ImportValue VPC-koutiku-VPCID

  ELBListenerHTTP:
   Type: AWS::ElasticLoadBalancingV2::Listener
   Properties: 
    DefaultActions: 
    - TargetGroupArn: !Ref ELBtargetGP
      Type: forward
    LoadBalancerArn: !Ref InternetELB
    Port: 80
    Protocol: HTTP

  ELBListenerHTTPS:
   Type: AWS::ElasticLoadBalancingV2::Listener
   Properties: 
    Certificates: 
    - CertificateArn: arn:aws:acm:ap-northeast-1:503005187957:certificate/f961a063-2ff0-4bf7-b10a-1541e2b28c9a
    DefaultActions: 
    - TargetGroupArn: !Ref ELBtargetGP
      Type: forward
    LoadBalancerArn: !Ref InternetELB
    Port: 443
    Protocol: HTTPS
    SslPolicy: ELBSecurityPolicy-2016-08
